# BareMetal

./: CMakeLists.txt  main.cpp
